[project]
name = "temp_liq_jet"
version = "0.1.19"
description = "Python framework for computing evaporative cooling of liquid jets in vacuum using the Knudsen model"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Robert Grisenti", email = "grisenti@atom.uni-frankfurt.de"}
]
homepage = "https://github.com/rgrisenti/temp_liq_jet"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy", 
    "scipy"
]

[project.urls]
#BugTracker = "https://github.com/yourusername/temp_liq_jet/issues"
Source = "https://github.com/rgrisenti/temp_liq_jet"
#Documentation = "https://github.com/yourusername/temp_liq_jet#readme"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
